# CMake-ProjectTemplate-C-Cpp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
cmake/: func_fetch.cmake
exe/MainExe/: CMakeLists.txt
exe/MainExe/src/: main.cpp
exe/MainExe/test/: main_test.cpp
exe/SomeExe/: CMakeLists.txt
exe/SomeExe/src/: main.cpp
exe/SomeExe/test/: main_test.cpp
libs/SomeLib/: CMakeLists.txt
libs/SomeLib/include/SomeLib/: SomeLib.hpp
libs/SomeLib/src/important/: SomeImportantClass.cpp  SomeImportantClass.hpp
libs/alib/: CMakeLists.txt
libs/alib/include/alib/: alib.hpp
libs/alib/include/alib/important/: SomeImportantClass.hpp
libs/alib/src/important/: SomeImportantClass.cpp
