FILE(GLOB_RECURSE SOURCES_TARGET_SomeLib LIST_DIRECTORIES true src/*.hpp src/*.cpp)

ADD_LIBRARY(SomeLib
        STATIC ${SOURCES_TARGET_SomeLib})

TARGET_INCLUDE_DIRECTORIES(SomeLib
        PUBLIC
        $<INSTALL_INTERFACE:include>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
        )